updated with actual project

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 												<div class="card card-size">
 												<div class="card-body">
 												    <!-- <h5 class="card-title">CSS Photo Effects</h5> -->
-												 		<div><a type="button" data-toggle="modal" data-target="#exampleModal2"><img src="./images/project-2.png" class="card-img-top" alt="..."></a></div>
+												 		<div><a type="button" data-toggle="modal" data-target="#exampleModal2"><img src="./images/project-2.jpg" class="card-img-top" alt="..."></a></div>
 												    <!-- <p class="card-text pt-2">A CodePen collection of CSS effects to add to a photo with minimal markup (like turning it into a folded poster).</p> -->
 												    <!-- <a href="#" type="button" class="btn btn-outline-secondary">Learn More</a> -->
 											  </div>
@@ -161,7 +161,7 @@
 												<div class="card card-size">
 											  <div class="card-body">
 												    <!-- <h5 class="card-title">Top Chef Stats</h5> -->
-												 		<div><a type="button" data-toggle="modal" data-target="#exampleModal3"><img src="./images/project-3.png" class="card-img-top" alt="..."></a></div>
+												 		<div><a type="button" data-toggle="modal" data-target="#exampleModal3"><img src="./images/project-3.jpg" class="card-img-top" alt="..."></a></div>
 												    <!-- <p class="card-text pt-2">Compiled data and facts from all the seasons of Top Chef, plus spinoffs Top Chef Masters, Just Desserts, and Duels.</p> -->
 												    <!-- <a href="#" type="button" class="btn btn-outline-secondary">Learn More</a> -->
 											  </div>
@@ -177,7 +177,7 @@
 												<div class="card card-size" style="width: 25rem;">
 												<div class="card-body">
 												    <!-- <h5 class="card-title">Nestflix</h5> -->
-												 		<div><a type="button" data-toggle="modal" data-target="#exampleModal4"><img src="./images/project-4.png" class="card-img-top" alt="..."></a></div>
+												 		<div><a type="button" data-toggle="modal" data-target="#exampleModal4"><img src="./images/project-4.jpg" class="card-img-top" alt="..."></a></div>
 												    <!-- <p class="card-text pt-2">A wiki dressed up as a streaming platform that catalogs fictional films and tv shows inside real movies and tv shows.</p> -->
 												    <!-- <a href="#" type="button" class="btn btn-outline-secondary">Learn More</a> -->
 									  		</div>
@@ -197,18 +197,22 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header text-white">
-        <h5 class="modal-title" id="exampleModalLabel">Manual</h5>
+        <h5 class="modal-title" id="exampleModalLabel">E-COMMERCE APPLICATION</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body text-white">
         <img src="./images/project-1.png" class="img-fluid">
-        <p class="pt-2">A custom layout and stylesheet for Stephanie Eckles’ very cool CSS project Style Stage.</p>
+        <p class="pt-2">Zuitt Bootcamp Capstone 3-Development - E-Commerce App<br>
+				- Use web-development frameworks<br>
+				- Use database and querying language(NoSQL with MongoDB)<br>
+				- Component-driven Development via React.js<br>
+				- Utilize separation of concerns<br>
+				- Deploy to cloud-based platforms(Heroku and Vercel)</p>
       </div>
       <div class="modal-footer">
-        <a href="https://gitlab.com/gibz1432" target="_blank"><button type="button" class="btn btn-modal btn-secondary">View Code</button></a>
-        <a href="https://stylestage.dev/styles/manual/" target="_blank"><button type="button" class="btn btn-modal btn-secondary">Learn More</button></a>
+        <a href="https://capstone-3-e-commerce-application.vercel.app/" target="_blank"><button type="button" class="btn btn-modal btn-secondary">Explore</button></a>
       </div>
     </div>
   </div>
@@ -222,18 +226,17 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header text-white">
-        <h5 class="modal-title" id="exampleModalLabel">CSS Photo Effects</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Under Construction</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body text-white">
-        <img src="./images/project-2.png" class="img-fluid">
-        <p class="pt-2">A CodePen collection of CSS effects to add to a photo with minimal markup (like turning it into a folded poster).</p>
+        <img src="./images/project-2.jpg" class="img-fluid">
+        <p class="pt-2">More Projects coming soon...</p>
       </div>
       <div class="modal-footer">
-        <a href="https://gitlab.com/gibz1432" target="_blank"><button type="button" class="btn btn-modal btn-secondary">View Code</button></a>
-        <a href="https://topchefstats.com/" target="_blank"><button type="button" class="btn btn-modal btn-secondary">Learn More</button></a>
+        <a href="#" target="_blank"><button type="button" class="btn btn-modal btn-secondary">Coming soon</button></a>
       </div>
     </div>
   </div>
@@ -246,18 +249,17 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header text-white">
-        <h5 class="modal-title" id="exampleModalLabel">Top Chef Stats</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Under Construction</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body text-white">
-        <img src="./images/project-3.png" class="img-fluid">
-        <p class="pt-2">Compiled data and facts from all the seasons of Top Chef, plus spinoffs Top Chef Masters, Just Desserts, and Duels.</p>
+        <img src="./images/project-3.jpg" class="img-fluid">
+        <p class="pt-2">More Projects coming soon...</p>
       </div>
       <div class="modal-footer">
-        <a href="https://gitlab.com/gibz1432" target="_blank"><button type="button" class="btn btn-modal btn-secondary">View Code</button></a>
-        <a href="https://topchefstats.com/" target="_blank"><button type="button" class="btn btn-modal btn-secondary">Learn More</button></a>
+        <a href="#" target="_blank"><button type="button" class="btn btn-modal btn-secondary">Coming soon</button></a>
       </div>
     </div>
   </div>
@@ -269,18 +271,17 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header text-white">
-        <h5 class="modal-title" id="exampleModalLabel">Nestflix</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Under Construction</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body text-white">
-        <img src="./images/project-4.png" class="img-fluid">
-        <p class="pt-2">A wiki dressed up as a streaming platform that catalogs fictional films and tv shows inside real movies and tv shows.</p>
+        <img src="./images/project-4.jpg" class="img-fluid">
+        <p class="pt-2">More Projects Coming soon...</p>
       </div>
       <div class="modal-footer">
-        <a href="https://gitlab.com/gibz1432" target="_blank"><button type="button" class="btn btn-modal btn-secondary">View Code</button></a>
-        <a href="https://topchefstats.com/" target="_blank"><button type="button" class="btn btn-modal btn-secondary">Learn More</button></a>
+        <a href="#" target="_blank"><button type="button" class="btn btn-modal btn-secondary">Coming soon</button></a>
       </div>
     </div>
   </div>
@@ -334,7 +335,7 @@
 <!-- End of Contact -->
 
 <footer class="text-center py-1">
-	&copy 2021 Gilbert Tajada, All rights reserved.
+	&copy 2022 Gilbert Tajada, All rights reserved.
 </footer>
 
 
