--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 												<div class="card card-size">
 												<div class="card-body">
 												    <!-- <h5 class="card-title">CSS Photo Effects</h5> -->
-												 		<div><a type="button" data-toggle="modal" data-target="#exampleModal2"><img src="./images/project-2.jpg" class="card-img-top" alt="..."></a></div>
+												 		<div><a type="button" data-toggle="modal" data-target="#exampleModal2"><img src="./images/project-2.png" class="card-img-top" alt="..."></a></div>
 												    <!-- <p class="card-text pt-2">A CodePen collection of CSS effects to add to a photo with minimal markup (like turning it into a folded poster).</p> -->
 												    <!-- <a href="#" type="button" class="btn btn-outline-secondary">Learn More</a> -->
 											  </div>
@@ -246,17 +246,21 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header text-white">
-        <h5 class="modal-title" id="exampleModalLabel">Under Construction</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Goal Setter App</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body text-white">
-        <img src="./images/project-2.jpg" class="img-fluid">
-        <p class="pt-2">More Projects coming soon...</p>
+        <img src="./images/project-2.png" class="img-fluid">
+        <p class="pt-2"><h3>Goal Setter Application - Personal Project</h3></p>
+        <br>
+				- Used Node, Express & MongoDB for creating REST API<br>
+				- Component-driven Development via React.js<br>
+				- Deploy to cloud-based platforms(Heroku and Vercel)</p>
       </div>
       <div class="modal-footer">
-        <a href="#" target="_blank"><button type="button" class="btn btn-modal btn-secondary">Coming soon</button></a>
+        <a href="https://goalsetter-mern-application.vercel.app/" target="_blank"><button type="button" class="btn btn-modal btn-secondary">Explore</button></a>
       </div>
     </div>
   </div>
